package ex1;
public class Employee extends EmployeeAbstract {
    public Employee(String name, int number) {
        super(name, number);
    }
}
